--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
 	"maintainers":[],
 	"contributors":[],
 	"bugs":"jiayi.xu@dianping.com",
+	"bin":{
+		"neuron":"bin/neuron.js"
+	},
 	"licenses":[{
     	"type": "GPLv2",	
     	"url": "http://www.example.com/licenses/gpl.html"
