--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 	"bin":{
 		"neuron":"bin/neuron.js"
 	},
+	"dependencies":{
+		"uglify-js":"0.x.x"
+	},
 	"licenses":[{
     	"type": "GPLv2",	
     	"url": "http://www.example.com/licenses/gpl.html"
