--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 	"dependencies":{
 		"uglify-js":"0.x.x",
 		"chai":"0.x.x",
-		"node-markdown":"0.x.x"
+		"node-markdown":"0.x.x",
+		"stylus":"0.x.x"
 	},
 	"licenses":[{
     	"type": "GPLv2",	
