--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"uglify-js":"0.x.x",
 		"chai":"0.x.x",
 		"node-markdown":"0.x.x",
-		"stylus":"0.x.x"
+		"stylus":"0.x.x",
+		"mu2":"0.6.0"
 	},
 	"licenses":[{
     	"type": "GPLv2",	
