--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"chai":"0.x.x",
 		"node-markdown":"0.x.x",
 		"stylus":"0.x.x",
-		"mu2":"0.6.0"
+		"mu2":"0.6.0",
+		"moment":"1.7"
 	},
 	"licenses":[{
     	"type": "GPLv2",	
