configurations: moving routes and other configurations out of nerve center;

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name":"nervecentre",
 	"description":"the proxy and static server for neuron framwork on alpha",
-	"version":"0.0.2",
+	"version":"0.1.2",
 	"keywords":["neuron"],
-	"maintainers":[],
+	"maintainers":["kael", "spud"],
 	"contributors":[],
 	"bugs":"jiayi.xu@dianping.com",
 	"bin":{
